Auto Play feature added

--- a/01-rock-paper-scissor/styles.css
+++ b/01-rock-paper-scissor/styles.css
@@ -35,9 +35,11 @@ body {
   margin-top: 50px;
 }
 
-.reset-scores {
+.reset-scores,
+.auto-play {
   background-color: white;
   border: none;
   font-size: 15px;
   padding: 8px 15px;
+  cursor: pointer;
 }
